# LocalPlayer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fetch-mpv.ps1  fetch-mpv.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/mpv/: placeholder.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: embed.rs  lib.rs  main.rs  mpv.rs  resume.rs  storage.rs  thumbs.rs
src/components/: ControlBar.tsx  HomeView.tsx  LocalePicker.tsx  PlayerView.tsx  Playlist.tsx  Seekbar.tsx  SettingsModal.tsx  Toasts.tsx  icons.tsx
src/lib/: backend.ts  bytes.ts  format.ts  i18n.ts  mpvEvents.ts  naturalSort.ts  resume.ts  shortcuts.ts  thumbs.ts  types.ts
src/lib/__tests__/: bytes.test.ts  format.test.ts  mpvEvents.test.ts  naturalSort.test.ts  resume.test.ts  shortcuts.test.ts  thumbs.test.ts
src/state/: store.ts  ui.ts
